# mbot

./: # File Tree: mbot.md  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml  readme.md
fimware/PicoRosBridge/: PicoRosBridge.ino  README.md  commands.h  diff_controller.h  encoder_driver.h  encoder_driver.ino  motor_driver.h  motor_driver.ino  sensors.h
fimware/ROSArduinoBridge/: ROSArduinoBridge.ino  encoder_driver.h  encoder_driver.ino  motor_driver.h  motor_driver.ino
launch/: rsp.launch.py
src/mbot_description/: CMakeLists.txt  package.xml
src/mbot_description/config/: joystick.yaml  mapper_params_online_async.yaml  nav2_params.yaml
src/mbot_description/launch/: joystick.launch.py  mapping.launch.py  navigation.launch.py  simulation.launch.py  teleop_hardware.launch.py  teleop_rviz.launch.py
src/mbot_description/meshes/: base_link.stl  front_left_wheel_1.stl  front_right_wheel_1.stl  lidar_1.stl  rear_left_wheel_1.stl  rear_right_wheel_1.stl
src/mbot_description/rviz/: rviz.rviz
src/mbot_description/scripts/: fake_odom.py  robot_bridge.py
src/mbot_description/urdf/: materials.xacro  mbot.xacro  mbot_gazebo.xacro
src/mbot_description/worlds/: room.world
src/rplidar_ros/: README.md
