<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mbot_description</name>
  <version>0.0.0</version>
  <description>The surveillance_bot_description package for Nav2 and Mapping</description>
  <maintainer email="humynexrobotics@gmail.com">HUMYNEX ROBOTICS</maintainer>
  <license>Proprietary - (c) 2026 HUMYNEX ROBOTICS</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
